clusters/z01/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  type: ClusterIP
  selector:
    operator.prometheus.io/name: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: web
