clusters/z01/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - prometheus
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
